# study-fastapi

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: db.py  main.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: task.py
test/: test_main.py
